<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/buttonF2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F0F0F0"
        android:text="@string/buttonF2_1Name"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextF2_1"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/textViewF2_1"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:text="@string/generatedPasswordTextDefault"
        android:textIsSelectable="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextF2_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636" />

    <EditText
        android:id="@+id/editTextF2_1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="number"
        android:minHeight="50dp"
        android:text="@string/hintForLengthOfPasswordToBeGenerated"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />

    <Button
        android:id="@+id/buttonF2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#F0F0F0"
        android:text="@string/buttonF2_2Name"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonF2_1"
        app:layout_constraintVertical_bias="0.042" />


</androidx.constraintlayout.widget.ConstraintLayout>